--- a/man/rmd/decision_tree_rpart.Rmd
+++ b/man/rmd/decision_tree_rpart.Rmd
@@ -58,6 +58,10 @@ decision_tree(tree_depth = integer(1), min_n = integer(1), cost_complexity = dou
 ```{r child = "template-tree-split-factors.Rmd"}
 ```
 
+## Examples 
+
+The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#decision-tree-rpart) for `decision_tree()` with the `"rpart"` engine.
+
 ## References
 
 -   Kuhn, M, and K Johnson. 2013. *Applied Predictive Modeling*. Springer.
