Add an article with minimal examples (#527)
* add article with minimal examples for fitting and predicting

* fix indentation

* all examples indented to get collapsing right

* make headers work within the collapsable section

* add id tags so that we can link to specific sections

* (failed) attempt to use the tag to link from help page to the article

* change order

* added links to pkgdown site in the help pages

* let GA build the site and deploy

* don't call it minimal because it's still quite a bit to take in

* add intro sentence

* add tensorflow for future examples

* more examples

`multinom_reg()`: nnet, keras
`mlp()`: nnet, keras
`mars()`: earth

* suppress auto-linking in section headings

* more examples

`logistic_reg()`: glm, glmnet, keras, LiblineaR, stan
`linear_reg()`: lm, glmnet, keras, stan
`decision_tree()`: rpart, C5.0
`boost_tree()`: xgboost, C5.0

* remove `set_mode()` when the model only has one mode

* added headings

* include info on model/mode/engine

Co-authored-by: Julia Silge <julia.silge@gmail.com>

* Update vignettes/articles/template-cls-multi-class.R

Co-authored-by: Julia Silge <julia.silge@gmail.com>

Co-authored-by: Julia Silge <julia.silge@gmail.com>

--- a/man/rmd/svm_linear_kernlab.Rmd
+++ b/man/rmd/svm_linear_kernlab.Rmd
@@ -68,6 +68,10 @@ Note that the `"kernlab"` engine does not naturally estimate class probabilities
 ```{r child = "template-same-scale.Rmd"}
 ```
 
+## Examples 
+
+The "Fitting and Predicting with parsnip" article contains [examples](https://parsnip.tidymodels.org/articles/articles/Examples.html#svm-linear-kernlab) for `svm_linear()` with the `"kernlab"` engine.
+
 ## References
 
  - Lin, HT, and R Weng. ["A Note on Platt’s Probabilistic Outputs for Support Vector Machines"](https://www.csie.ntu.edu.tw/~cjlin/papers/plattprob.pdf)
