--- a/man/rmd/surv_reg_flexsurv.Rmd
+++ b/man/rmd/surv_reg_flexsurv.Rmd
@@ -5,16 +5,50 @@
 
 ## Tuning Parameters
 
-This model has no tuning parameters.
+```{r flexsurv-param-info, echo = FALSE}
+defaults <- 
+  tibble::tibble(parsnip = c("dist"),
+                 default = c("'weibull'"))
+
+param <-
+  surv_reg() %>%
+  set_engine("flexsurv") %>%
+  set_mode("regression") %>%
+  tunable() %>%
+  dplyr::select(-source, -component, -component_id, parsnip = name) %>%
+  dplyr::mutate(
+    dials = purrr::map(call_info, get_dials),
+    label = purrr::map_chr(dials, ~ .x$label),
+    type = purrr::map_chr(dials, ~ .x$type)
+  ) %>%
+  dplyr::full_join(defaults, by = "parsnip") %>%
+  dplyr::mutate(
+    item =
+      glue::glue("- `{parsnip}`: {label} (type: {type}, default: {default})\n\n")
+  )
+```
+
+This model has `r nrow(param)` tuning parameters:
+
+```{r flexsurv-param-list, echo = FALSE, results = "asis"}
+param$item
+```
+
 
 ## Translation from parsnip to the original package
 
 ```{r flexsurv-reg}
-surv_reg() %>% 
+surv_reg(dist = character(1)) %>% 
   set_engine("flexsurv") %>% 
   set_mode("regression") %>% 
   translate()
 ```
+
+## Other details
+
+The main interface for this model uses the formula method since the model specification typically involved the use of [survival::Surv()]. 
+
+For this engine, stratification cannot be specified via [`strata()`], please see the documentation of the [`flexsurv`] package for alternative specifications.
 
 ## References
 
