--- a/man/rmd/mars_earth.Rmd
+++ b/man/rmd/mars_earth.Rmd
@@ -13,18 +13,7 @@ defaults <-
 param <-
   mars() %>% 
   set_engine("earth") %>% 
-  tunable() %>% 
-  dplyr::select(-source, -component, -component_id, parsnip = name) %>% 
-  dplyr::mutate(
-    dials = purrr::map(call_info, get_dials),
-    label = purrr::map_chr(dials, ~ .x$label),
-    type = purrr::map_chr(dials, ~ .x$type)
-  ) %>% 
-  dplyr::full_join(defaults, by = "parsnip") %>% 
-  mutate(
-    item = 
-      glue::glue("- `{parsnip}`: {label} (type: {type}, default: {default})\n\n")
-  )
+  make_parameter_list(defaults)
 ```
 
 This model has `r nrow(param)` tuning parameters:
